# schoen.macht.geld

./: .gitignore  Caddyfile  README.md  docker-compose.yml  firestore.rules
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO  alembic.ini  docker-compose.yml  pyproject.toml
backend/backup/: Dockerfile  backup.sh
backend/migrations/: env.py
backend/migrations/versions/: 1d2e35a2d7a6_add_parameters_to_ai_task.py  96883c958b15_initial_schema.py  b85720e286f6_add_compound_indexes_for_performance.py
backend/scripts/: seed_ai.py  seed_data.py
backend/src/app/: __main__.py  admin.py  config.py  database.py  logger.py  main.py  middleware.py  scheduler.py  storage.py  swipe_token.py  websocket.py
backend/src/app/models/: __init__.py  ai_task.py  stock.py
backend/src/app/routers/: __init__.py  ai.py  market.py  stocks.py  swipe.py
backend/src/app/schemas/: ai.py  market.py  stock.py
backend/src/app/services/: atlascloud.py  google_ai.py  market_events.py
docs/: AI_PROMPTS.md  ARCHITECTURE.md  MIGRATION_PLAN.md  backend.json  blueprint.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  VISUAL_ENHANCEMENTS_TODO.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/ai/flows/: generate-profile-descriptions.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/display/: layout.tsx  page.tsx
frontend/src/app/register/: edit-stock-dialog.tsx  page.tsx  registration-client.tsx
frontend/src/app/swipe/: page.tsx  swipe-client.tsx
frontend/src/components/: flash-value.tsx  icons.tsx  marquee.tsx
frontend/src/components/display/: ChangeArrow.tsx  (+23 more)
frontend/src/constants/: messages.ts  timings.ts
frontend/src/contexts/: effects-context.tsx  events-context.tsx  market-context.tsx  websocket-context.tsx
frontend/src/hooks/: use-hotkeys.tsx  use-stocks.ts
frontend/src/lib/: mock-data.ts  placeholder-images.json  types.ts  utils.ts
src/ai/: dev.ts
src/ai/flows/: generate-funny-news-headlines.ts  generate-profile-descriptions.ts
src/app/: layout.tsx  page.tsx
src/app/display/: layout.tsx  page.tsx
src/app/register/: page.tsx  registration-client.tsx
src/app/swipe/: page.tsx  swipe-client.tsx
src/components/: icons.tsx
src/components/ui/: textarea.tsx
src/firebase/: config.ts
src/lib/: mock-data.ts  placeholder-images.json  types.ts
(+53 files in other folders)
