[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Schoen Macht Geld stock exchange party game"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.0",
    "fastapi>=0.124.4",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sqladmin>=0.22.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.basedpyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportCallInDefaultInitializer = false  # FastAPI Depends() pattern
reportUnannotatedClassAttribute = false  # Pydantic model_config
reportUnknownVariableType = false  # SQLModel Field type stubs
